objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Amount_On_Invoice__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of this cost that is on an invoice.</description>
        <label>Amount On Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Change_Internal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Change Internal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Change_Project__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Change Project</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Code</label>
        <referenceTo>Cost_Code__c</referenceTo>
        <relationshipName>R00N300000024gh2EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <label>Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra__c</fullName>
        <label>Extra</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Recalc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to force a recalculation of the rate and total cost fields.  This is set and unset via apex code.</description>
        <label>Force Recalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <formula>TEXT( Invoice__r.Status__c )</formula>
        <label>Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoices__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>R00N80000002MPXVEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <label>Other Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pay_Id__c</fullName>
        <label>Pay Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Grouping__c</fullName>
        <formula>IF(OR( Date__c &lt;=  Project__r.Hand_off_Date__c  , ISBLANK(Project__r.Hand_off_Date__c)), &quot;0: Development&quot;, 
IF(AND(Date__c  &lt;=   Project__r.X50_Set_Completed__c    ,Date__c&gt;Project__r.Hand_off_Date__c ),&quot;1: 50 Set Development&quot;, 
IF( 
AND(Date__c  &lt;=  Project__r.Permit_Set_Completed__c  , 
Date__c  &gt; Project__r.X50_Set_Completed__c  ),&quot;2: Permit Set Development&quot;, 
IF( 
AND(Date__c  &lt;=  Project__r.Const_Set_Completed__c , 
Date__c  &gt; Project__r.Permit_Set_Completed__c  ),&quot;3: CD Set Development&quot;, 
IF( 
AND(Date__c  &lt;= Project__r.SFDC_Project_Start_Date__c , 
Date__c &gt; Project__r.Const_Set_Completed__c),&quot;4: Post CD Set&quot;, 
IF(Date__c &gt; Project__r.SFDC_Project_Start_Date__c, &quot; 5: CD Admin&quot;, null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Internal_Calc__c</fullName>
        <description>Calculated internal rate.</description>
        <label>Rate (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Internal__c</fullName>
        <formula>Team_Member__r.Rate_Internal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Project_Calc__c</fullName>
        <description>Calculated project Rate.</description>
        <label>Rate (Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Project__c</fullName>
        <formula>Team_Member__r.Rate_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate (Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Construction Pricing</fullName>
                </value>
                <value>
                    <fullName>Correspondence</fullName>
                </value>
                <value>
                    <fullName>Document Preparation</fullName>
                </value>
                <value>
                    <fullName>Drafting</fullName>
                </value>
                <value>
                    <fullName>External Meeting</fullName>
                </value>
                <value>
                    <fullName>Financial Analysis</fullName>
                </value>
                <value>
                    <fullName>Interconnection</fullName>
                </value>
                <value>
                    <fullName>Internal Meeting</fullName>
                </value>
                <value>
                    <fullName>Market Analysis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PPA Pricing</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Rebate Analysis</fullName>
                </value>
                <value>
                    <fullName>Site Assessment</fullName>
                </value>
                <value>
                    <fullName>Technology Assessment</fullName>
                </value>
                <value>
                    <fullName>Utility Analysis</fullName>
                </value>
                <value>
                    <fullName>Construction Administration</fullName>
                </value>
                <value>
                    <fullName>Electrical Engineering</fullName>
                </value>
                <value>
                    <fullName>Structural Engineering</fullName>
                </value>
                <value>
                    <fullName>Internal Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ONLY FOR CONSULTING SERVICES</inlineHelpText>
        <label>Team Member</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Team_Member__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Entry_Grouping__c</fullName>
        <formula>IF( Date__c  &lt;= Project__r.Hand_off_Date__c , &quot;0: Development&quot;, 
IF(AND(Date__c &lt;=  Project__r.X50_Set_Completed__c ,Date__c &gt; Project__r.Hand_off_Date__c ),&quot;1: 50 Set Development&quot;, 
IF( AND(Date__c &lt;= Project__r.Permit_Set_Completed__c  , 
Date__c &gt;Project__r.X50_Set_Completed__c ),&quot;2: Permit Set Development&quot;, 
IF( 
AND(Date__c&lt;= Project__r.Const_Set_Completed__c , 
Date__c &gt; Project__r.Permit_Set_Completed__c ),&quot;3: CD Set Development&quot;, 
IF( 
AND(Date__c &lt;= Project__r.SFDC_Project_Start_Date__c , 
Date__c &gt; Project__r.Const_Set_Completed__c),&quot;4: Post CD Set&quot;, 
IF(Date__c &gt; Project__r.SFDC_Project_Start_Date__c, &quot; 5: CD Admin&quot;, null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Entry Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Internal2__c</fullName>
        <formula>Hours__c * rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost Internal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Internal_Calc__c</fullName>
        <description>Calculated total cost using the internal rate.</description>
        <label>Total Cost (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Internal__c</fullName>
        <formula>Rate_Internal__c * Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost (Internal)(formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Project_Calc__c</fullName>
        <description>Calculated (pvTotals.setRatesTE) Total Cost (Project).</description>
        <label>Total Cost (Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Project__c</fullName>
        <formula>Team_Member__r.Rate_Project__c  *  Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost (Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rate__c</fullName>
        <formula>CreatedBy.Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Team_Member__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Time Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <recordTypes>
        <fullName>EPC_Project</fullName>
        <active>false</active>
        <label>EPC Project</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Headers</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS( Cost_Code__r.Number__c , &apos;0000&apos; ), Cost_Code__r.Number__c &lt;&gt; &apos;9-999-0000&apos;)</errorConditionFormula>
        <errorMessage>Please select a different Cost Code as headers cannot be used.</errorMessage>
    </validationRules>
</CustomObject>